--- a/ClubDeCarte/ClubDeCarte.csproj
+++ b/ClubDeCarte/ClubDeCarte.csproj
@@ -52,6 +52,7 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -195,10 +196,17 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Author.css" />
+    <Content Include="Content\BookOfTheWeek.css" />
+    <Content Include="Content\BookReviews.css" />
+    <Content Include="Content\Books.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\CreateEditDelete.css" />
+    <Content Include="Content\Events.css" />
+    <Content Include="Content\HomePage.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
