--- a/ClubDeCarte/Web.config
+++ b/ClubDeCarte/Web.config
@@ -9,7 +9,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="BookClubDBContext" connectionString="Data Source=.;      Initial Catalog=ClubDeCarte;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="BookClubDBContext" connectionString="Data Source=.;      
+		 Initial Catalog=ClubDeCarte;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
