Added photos to Books & BookReview

--- a/ClubDeCarte/ClubDeCarte.csproj
+++ b/ClubDeCarte/ClubDeCarte.csproj
@@ -218,6 +218,23 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Photos\BookID1.jpg" />
+    <Content Include="Photos\BookID10.jpeg" />
+    <Content Include="Photos\BookID11.jpeg" />
+    <Content Include="Photos\BookID12.jpeg" />
+    <Content Include="Photos\BookID13.png" />
+    <Content Include="Photos\BookID14.jpeg" />
+    <Content Include="Photos\BookID15.jpeg" />
+    <Content Include="Photos\BookID16.jpeg" />
+    <Content Include="Photos\BookID17.jpg" />
+    <Content Include="Photos\BookID18.jpeg" />
+    <Content Include="Photos\BookID2.jpg" />
+    <Content Include="Photos\BookID4.png" />
+    <Content Include="Photos\BookID5.jpg" />
+    <Content Include="Photos\BookID6.jpeg" />
+    <Content Include="Photos\BookID8.jpeg" />
+    <Content Include="Photos\BookID7.jpeg" />
+    <Content Include="Photos\BookID9.jpeg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
