--- a/ClubDeCarte/packages.config
+++ b/ClubDeCarte/packages.config
@@ -13,6 +13,14 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
@@ -29,5 +37,22 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
+  <package id="Remotion.Linq" version="2.1.1" targetFramework="net472" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net472" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net472" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net472" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Linq.Queryable" version="4.0.1" targetFramework="net472" />
+  <package id="System.ObjectModel" version="4.0.12" targetFramework="net472" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net472" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
